# sds_hdb

./: README.md
backend/: .env.development  .gitignore  README.md  compose.py  gemini_client.py  generate_juvenile_and_video.py  generate_video_from_path.py  hello.py  image_generator.py  main.py  mask_processing.py  multi_stage_pipeline.py  openai_client.py  prompt_builders.py  prompt_builders_old.py  pyproject.toml  requirements.txt  server.py  upload.py
backend/auth/: auth_dependencies.py  auth_middleware.py  auth_strategy.py
backend/controllers/: ai_controller.py  canvas_controller.py  project_controller.py  rag_controller.py  user_controller.py  video_generation_controller.py
backend/core/: ai.py  config.py  prompts.py
backend/data/: full_dataset.xlsx  palm.csv
backend/db/: db.py
backend/models/: auth.py  canvas.py  canvas_model.py  project_model.py  user.py  user_model.py
backend/repository/: canvas_repository.py  project_repository.py  user_repository.py
backend/routes/: main_router.py
backend/schemas/: RAG_schema.py  ai_schema.py  auth_schema.py  canvas_schema.py  project_schema.py  user_schema.py  video_generation_schema.py
backend/services/: RAG_service.py  ai_service.py  canvas_service.py  chroma.py  project_service.py  user_service.py  video_generation_service.py
backend/storage/chroma_db/: chroma.sqlite3
backend/sub_routes/: RAG_routes.py  ai_routes.py  auth_routes.py  canvas_routes.py  project_routes.py  user_routes.py  video_generation_routes.py
backend/utils/: ai_helper.py  canvas_helper.py
frontend/: .env  .gitignore  jsconfig.json  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/src/: App.css  App.jsx  App_old.jsx  App_withoutlesso.jsx  EntryPoint.jsx  MultiUploader.jsx  PromptComposer.jsx  TestApp.jsx  index.css  main.jsx
frontend/src/api/: aiAPI.js  authAPI.js  axiosInstance.js  canvasAPI.js  projectAPI.js  ragAPI.js  userAPI.js  videoAPI.js
frontend/src/auth/: ProtectedRoute.jsx  PublicRoute.jsx
frontend/src/components/: UploadBox.tsx
frontend/src/config/: generationcardconfig.js  (+1 more)
lasso_test/: index.html  package-lock.json  package.json
lasso_test/server/: .env  index.js  package-lock.json  package.json  test_replicate.cjs
lasso_test/src/: App.jsx
(+50 files in other folders)
