[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==4.1.2",
    "beanie>=2.0.0",
    "fastapi[standard]>=0.115.8",
    "motor>=3.7.1",
    "numpy>=2.3.5",
    "onnxruntime>=1.23.2",
    "opencv-python>=4.11.0.86",
    "pillow>=12.0.0",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.12.0",
    "python-dotenv>=1.0.0", # For environment variables
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "rembg>=2.0.68",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.37.0",
]
